responsive index menu after desert

--- a/index.html
+++ b/index.html
@@ -285,8 +285,9 @@
                             <ul class="nav nav-tabs mu-restaurant-menu">
                                 <li class="active"><a href="#pizza" data-toggle="tab">Pizza</a></li>
                                 <li><a href="#piadine" data-toggle="tab">Piadine</a></li>
-                                <li><a href="#paste" data-toggle="tab">Paste</a></li>
                                 <li><a href="#salate" data-toggle="tab">Salate</a></li>
+                                <li><a href="#paste" data-toggle="tab">Paste</a></li>
+                                <li><a href="#desert" data-toggle="tab">Desert</a></li>
                                 <li><a href="#platouri" data-toggle="tab">Platouri</a></li>
                             </ul>
 
@@ -378,49 +379,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="tab-pane fade " id="paste">
-                                    <div class="mu-tab-content-area">
-                                        <div class="row">
-                                            <div class="col-md-12">
-                                                <ul class="mu-menu-item-nav">
-                                                    <li>
-                                                        <div class="row gp-menu-row">
-                                                            <div class="col col-xs-9">
-                                                                <h2 class="gp-menu-name">Spaghete Carbonara</h2>
-                                                                <p class="gp-menu-info">grancucina, bacon, ou, parmezan,
-                                                                    piper</p>
-                                                            </div>
-                                                            <div class="col col-xs-3">
-                                                                <h2 class="gp-menu-price"><span class="gp-price">22
-                                                                        lei</span></h2>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="row gp-menu-row gp-menu-row-bg">
-                                                            <div class="col col-xs-9">
-                                                                <h2 class="gp-menu-name">Penne Amatriciana</h2>
-                                                                <p class="gp-menu-info">sos ro&#351;u, bacon, parmezan,
-                                                                    ceap&#259;, usturoi</p>
-                                                            </div>
-                                                            <div class="col col-xs-3">
-                                                                <h2 class="gp-menu-price"><span class="gp-price">20
-                                                                        lei</span></h2>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="row gp-menu-row" style="border: 0;">
-                                                            <div class="col col-xs-12 gp-menu-more">
-                                                                <span><a href="meniu/paste.html">vezi tot</a></span>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
                                 <div class="tab-pane fade " id="salate">
                                     <div class="mu-tab-content-area">
                                         <div class="row">
@@ -466,7 +424,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="tab-pane fade " id="platouri">
+                                <div class="tab-pane fade " id="paste">
                                     <div class="mu-tab-content-area">
                                         <div class="row">
                                             <div class="col-md-12">
@@ -474,10 +432,9 @@
                                                     <li>
                                                         <div class="row gp-menu-row">
                                                             <div class="col col-xs-9">
-                                                                <h2 class="gp-menu-name">Garden</h2>
-                                                                <p class="gp-menu-info">grancucina, mozzarella,
-                                                                    piept de pui, ardei gras, ciuperci, dovlecei,
-                                                                    usturoi</p>
+                                                                <h2 class="gp-menu-name">Spaghete Carbonara</h2>
+                                                                <p class="gp-menu-info">grancucina, bacon, ou, parmezan,
+                                                                    piper</p>
                                                             </div>
                                                             <div class="col col-xs-3">
                                                                 <h2 class="gp-menu-price"><span class="gp-price">22
@@ -488,12 +445,101 @@
                                                     <li>
                                                         <div class="row gp-menu-row gp-menu-row-bg">
                                                             <div class="col col-xs-9">
-                                                                <h2 class="gp-menu-name">Pizza Casei</h2>
-                                                                <p class="gp-menu-info">sos de roșii, mozzarella, bacon,
-                                                                    ciuperci, măsline, parmezan</p>
+                                                                <h2 class="gp-menu-name">Penne Amatriciana</h2>
+                                                                <p class="gp-menu-info">sos ro&#351;u, bacon, parmezan,
+                                                                    ceap&#259;, usturoi</p>
                                                             </div>
                                                             <div class="col col-xs-3">
                                                                 <h2 class="gp-menu-price"><span class="gp-price">20
+                                                                        lei</span></h2>
+                                                            </div>
+                                                        </div>
+                                                    </li>
+                                                    <li>
+                                                        <div class="row gp-menu-row" style="border: 0;">
+                                                            <div class="col col-xs-12 gp-menu-more">
+                                                                <span><a href="meniu/paste.html">vezi tot</a></span>
+                                                            </div>
+                                                        </div>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tab-pane fade " id="desert">
+                                    <div class="mu-tab-content-area">
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <ul class="mu-menu-item-nav">
+                                                    <li>
+                                                        <div class="row gp-menu-row">
+                                                            <div class="col col-xs-9">
+                                                                <h2 class="gp-menu-name">Papana&#351;i</h2>
+                                                                <p class="gp-menu-info">350g</p>
+                                                            </div>
+                                                            <div class="col col-xs-3">
+                                                                <h2 class="gp-menu-price"><span class="gp-price">15
+                                                                        lei</span></h2>
+                                                            </div>
+                                                        </div>
+                                                    </li>
+                                                    <li>
+                                                        <div class="row gp-menu-row gp-menu-row-bg">
+                                                            <div class="col col-xs-9">
+                                                                <h2 class="gp-menu-name">Cl&#259;tite</h2>
+                                                                <p class="gp-menu-info">2 buc&#259;&#355;i</p>
+                                                            </div>
+                                                            <div class="col col-xs-3">
+                                                                <h2 class="gp-menu-price"><span class="gp-price">8
+                                                                        lei</span></h2>
+                                                            </div>
+                                                        </div>
+                                                    </li>
+                                                    <li>
+                                                        <div class="row gp-menu-row" style="border: 0;">
+                                                            <div class="col col-xs-12 gp-menu-more">
+                                                                <span><a href="meniu/desert.html">vezi tot</a></span>
+                                                            </div>
+                                                        </div>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tab-pane fade " id="platouri">
+                                    <div class="mu-tab-content-area">
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <ul class="mu-menu-item-nav">
+                                                    <li>
+                                                        <div class="row gp-menu-row">
+                                                            <div class="col col-xs-9">
+                                                                <h2 class="gp-menu-name">Garden</h2>
+                                                                <p class="gp-menu-info">ciuperci cu gorgonzola, grisine
+                                                                    cu prosciutto, ro&#351;ii cherry, m&#259;sline,
+                                                                    crochete ca&#351;caval, bruschete ton</p>
+                                                            </div>
+                                                            <div class="col col-xs-3">
+                                                                <h2 class="gp-menu-price"><span class="gp-price">xx
+                                                                        lei</span></h2>
+                                                            </div>
+                                                        </div>
+                                                    </li>
+                                                    <li>
+                                                        <div class="row gp-menu-row gp-menu-row-bg">
+                                                            <div class="col col-xs-9">
+                                                                <h2 class="gp-menu-name">Mix Grill - 1850g</h2>
+                                                                <p class="gp-menu-info">cotlet de porc 250g,
+                                                                    piept de pui 250g, mici (6 buc)
+                                                                    450g-500g, c&#226;rn&#259;ciori 300g,</p>
+                                                                <p class="gp-menu-info">cartofi
+                                                                    &#355;&#259;r&#259;ne&#351;ti 350g,
+                                                                    mur&#259;turi 200g, turti&#355;e</p>
+                                                            </div>
+                                                            <div class="col col-xs-3">
+                                                                <h2 class="gp-menu-price"><span class="gp-price">75
                                                                         lei</span></h2>
                                                             </div>
                                                         </div>
