--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                                                     <li>
                                                         <div class="row gp-menu-row gp-menu-row-bg">
                                                             <div class="col col-xs-9">
-                                                                <h2 class="gp-menu-name">Mix Grill - 1850g</h2>
+                                                                <h2 class="gp-menu-name">Mix Grill 1850g</h2>
                                                                 <p class="gp-menu-info">cotlet de porc 250g,
                                                                     piept de pui 250g, mici (6 buc)
                                                                     450g-500g, c&#226;rn&#259;ciori 300g,</p>
