href to gp-menu

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                             <i class="fa fa-taxi"></i>
                                         </h4>
 
-                                        <h6><a href="#mu-restaurant-menu">Alege ce ai poft&#259;</a></h6>
+                                        <h6><a href="#gp-menu">Alege ce ai poft&#259;</a></h6>
                                     </div>
                                 </div>
 
@@ -276,7 +276,7 @@
 
 
     <!-- Start Restaurant Menu -->
-    <section id="mu-restaurant-menu">
+    <section id="gp-menu">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
