--- a/index.html
+++ b/index.html
@@ -516,13 +516,16 @@
                                                     <li>
                                                         <div class="row gp-menu-row">
                                                             <div class="col col-xs-9">
-                                                                <h2 class="gp-menu-name">Garden</h2>
-                                                                <p class="gp-menu-info">ciuperci cu gorgonzola, grisine
-                                                                    cu prosciutto, ro&#351;ii cherry, m&#259;sline,
-                                                                    crochete ca&#351;caval, bruschete ton</p>
+                                                                <h2 class="gp-menu-name">Aperitiv 900g</h2>
+                                                                <p class="gp-menu-info">salam uscat 80g, &#351;unc&#259;
+                                                                    presat&#259; 80g, ca&#351;caval 100g,
+                                                                    telemea 100g,</p>
+                                                                <p class="gp-menu-info">bacon 80g, ro&#351;ii 1500g,
+                                                                    castrave&#355;i 150g, m&#259;sline 60g, ceap&#259;
+                                                                    ro&#351;i 100g</p>
                                                             </div>
                                                             <div class="col col-xs-3">
-                                                                <h2 class="gp-menu-price"><span class="gp-price">xx
+                                                                <h2 class="gp-menu-price"><span class="gp-price">38
                                                                         lei</span></h2>
                                                             </div>
                                                         </div>
@@ -533,9 +536,9 @@
                                                                 <h2 class="gp-menu-name">Mix Grill 1850g</h2>
                                                                 <p class="gp-menu-info">cotlet de porc 250g,
                                                                     piept de pui 250g, mici (6 buc)
-                                                                    450g-500g, c&#226;rn&#259;ciori 300g,</p>
-                                                                <p class="gp-menu-info">cartofi
-                                                                    &#355;&#259;r&#259;ne&#351;ti 350g,
+                                                                    450g-500g,</p>
+                                                                <p class="gp-menu-info">c&#226;rn&#259;ciori 300g,
+                                                                    cartofi &#355;&#259;r&#259;ne&#351;ti 350g,
                                                                     mur&#259;turi 200g, turti&#355;e</p>
                                                             </div>
                                                             <div class="col col-xs-3">
