gallery in despre

--- a/despre.html
+++ b/despre.html
@@ -154,6 +154,127 @@
     </section>
     <!-- End About us -->
 
+    <section id="gp-gallery">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="gp-gallery-area">
+
+                        <!-- <div class="gp-title">
+                            <span class="gp-subtitle">Discover</span>
+                            <h2>Our Gallery</h2>
+                        </div> -->
+
+                        <!-- Start gallery image -->
+                        <div class="gp-gallery-content">
+                            <div class="gp-gallery-body">
+                                <!-- start single gallery image -->
+                                <div class="gp-single-gallery col-md-4">
+                                    <div class="gp-single-gallery-item">
+                                        <figure class="gp-single-gallery-img">
+                                            <a class="gp-imglink" href="assets/img/gallery/1.jpg">
+                                                <img alt="img" src="assets/img/gallery/1.jpg">
+                                                <div class="gp-single-gallery-info">
+                                                    <img class="gp-view-btn" src="assets/img/plus.png"
+                                                        alt="plus icon img">
+                                                </div>
+                                            </a>
+                                        </figure>
+                                    </div>
+                                </div>
+                                <!-- End single gallery image -->
+
+                                <!-- start single gallery image -->
+                                <div class="gp-single-gallery col-md-4">
+                                    <div class="gp-single-gallery-item">
+                                        <figure class="gp-single-gallery-img">
+                                            <a class="gp-imglink" href="assets/img/gallery/2.jpg">
+                                                <img alt="img" src="assets/img/gallery/2.jpg">
+                                                <div class="gp-single-gallery-info">
+                                                    <img class="gp-view-btn" src="assets/img/plus.png"
+                                                        alt="plus icon img">
+                                                </div>
+                                            </a>
+                                        </figure>
+                                    </div>
+                                </div>
+                                <!-- End single gallery image -->
+
+                                <!-- start single gallery image -->
+                                <div class="gp-single-gallery col-md-4">
+                                    <div class="gp-single-gallery-item">
+                                        <figure class="gp-single-gallery-img">
+                                            <a class="gp-imglink" href="assets/img/gallery/3.jpg">
+                                                <img alt="img" src="assets/img/gallery/3.jpg">
+                                                <div class="gp-single-gallery-info">
+                                                    <img class="gp-view-btn" src="assets/img/plus.png"
+                                                        alt="plus icon img">
+                                                </div>
+                                            </a>
+                                        </figure>
+                                    </div>
+                                </div>
+                                <!-- End single gallery image -->
+
+                                <!-- start single gallery image -->
+                                <div class="gp-single-gallery col-md-4">
+                                    <div class="gp-single-gallery-item">
+                                        <figure class="gp-single-gallery-img">
+                                            <a class="gp-imglink" href="assets/img/gallery/4.jpg">
+                                                <img alt="img" src="assets/img/gallery/4.jpg">
+                                                <div class="gp-single-gallery-info">
+                                                    <img class="gp-view-btn" src="assets/img/plus.png"
+                                                        alt="plus icon img">
+                                                </div>
+                                            </a>
+                                        </figure>
+                                    </div>
+                                </div>
+                                <!-- End single gallery image -->
+
+                                <!-- start single gallery image -->
+                                <div class="gp-single-gallery col-md-4">
+                                    <div class="gp-single-gallery-item">
+                                        <figure class="gp-single-gallery-img">
+                                            <a class="gp-imglink" href="assets/img/gallery/5.jpg">
+                                                <img alt="img" src="assets/img/gallery/5.jpg">
+                                                <div class="gp-single-gallery-info">
+                                                    <img class="gp-view-btn" src="assets/img/plus.png"
+                                                        alt="plus icon img">
+                                                </div>
+                                            </a>
+                                        </figure>
+                                    </div>
+                                </div>
+                                <!-- End single gallery image -->
+
+                                <!-- start single gallery image -->
+                                <div class="gp-single-gallery col-md-4">
+                                    <div class="gp-single-gallery-item">
+                                        <figure class="gp-single-gallery-img">
+                                            <a class="gp-imglink" href="assets/img/gallery/6.jpg">
+                                                <img alt="img" src="assets/img/gallery/6.jpg">
+                                                <div class="gp-single-gallery-info">
+                                                    <img class="gp-view-btn" src="assets/img/plus.png"
+                                                        alt="plus icon img">
+                                                </div>
+                                            </a>
+                                        </figure>
+                                    </div>
+                                </div>
+                                <!-- End single gallery image -->
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
+    </section>
+
     <!-- footer -->
     <footer id="gp-footer">
         <div class="container">
