descriere + font change

--- a/despre.html
+++ b/despre.html
@@ -19,12 +19,11 @@
     <link href="style.css" rel="stylesheet">
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <!-- Tangerine for small title -->
     <link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>
 
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Leckerli+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -116,10 +115,6 @@
                 <div class="col-md-12">
                     <div class="gp-about-us-area">
 
-                        <div class="gp-title">
-                            <h2>Despre noi</h2>
-                        </div>
-
                         <div class="row">
                             <div class="col-md-5">
                                 <div class="gp-about-us-left">
@@ -129,21 +124,8 @@
                             </div>
                             <div class="col-md-7">
                                 <div class="gp-about-us-right">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam minus aliquid,
-                                        itaque illum
-                                        assumenda repellendus dolorem, dolore numquam totam saepe, porro delectus,
-                                        libero enim odio quo.
-                                    </p>
-                                    <ul style="margin-bottom: 0">
-                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A.</li>
-                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. B.</li>
-                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. C.</li>
-                                    </ul>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam minus aliquid,
-                                        itaque illum
-                                        assumenda repellendus dolorem, dolore numquam totam saepe, porro delectus,
-                                        libero enim odio quo.
-                                    </p>
+                                    <h2>Probabil cea mai bun&#259; pizza din ora&#351;</h2>
+                                    <h1>Merit&#259; s&#259; &#238;ncerci!</h1>
                                 </div>
                             </div>
                         </div>
@@ -159,11 +141,6 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="gp-gallery-area">
-
-                        <!-- <div class="gp-title">
-                            <span class="gp-subtitle">Discover</span>
-                            <h2>Our Gallery</h2>
-                        </div> -->
 
                         <!-- Start gallery image -->
                         <div class="gp-gallery-content">
