--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
                                     <span class="fa fa-facebook"></span></a>
                                 <a href="https://website-4138154070103958998182-pizzarestaurant.business.site">
                                     <span class="fa fa-google-plus"></span></a>
-                                <a href="https://2reac.github.io/gardenpizza">
+                                <a href="https://www.instagram.com/garden_pizza_/">
                                     <span class="fa fa-instagram"></span></a>
                             </div>
                         </div>
